<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CarpoolApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="frag_2">frag_2</string>
    <string name="frag_3">frag_3</string>
    <string name="textViewUsername">CarpoolerUsername</string>
    <string name="textViewTripDate">Date:</string>
    <string name="textViewTripTime">Time:</string>
    <string name="textViewDataCampusA">Start</string>
    <string name="textViewDataCampusB">End</string>
    <string name="textViewDetails">Details</string>
    <string name="textViewDataTripDate">Mon, July 1</string>
    <string name="textViewDataTripTime">12:15pm</string>
    <string name="textViewCampusA">From:</string>
    <string name="textViewCampusB">To:</string>
    <string name="textViewTransportMode">Mode</string>
    <string name="textViewTMDriver">D</string>
    <string name="textViewTMPassenger">P</string>
    <string name="textViewCampusSry">SRY</string>
    <string name="textViewCampusVan">VAN</string>
    <string name="textViewCampusBby">BBY</string>
    <string name="textViewUsernameDriver">Drivers Username</string>
    <string name="textViewCampusStart">Start Campus:</string>
    <string name="textViewCampusEnd">End Campus:</string>
    <string name="textViewLocationMeetDetails">Meeting Location Details:</string>
    <string name="textViewDataLocationMeetingDetails">Meet you in the the parking lot next to Waterfront Station. Please be one time. Let me know if you will be running late. Text or call me. See you then!</string>
    <string name="textViewCarpoolGuests">Carpool Guests:</string>
    <string name="textViewDataCarpoolGuests">jcl42 aml21 sam23</string>
    <string name="textViewCarDetails">Drivers Car Details:</string>
    <string name="textViewCarModel">Model:</string>
    <string name="textViewCarMake">Make:</string>
    <string name="textViewCarColor">Color</string>
    <string name="textViewCarYear">Year:</string>
    <string name="textViewDataCarModel">Fusion</string>
    <string name="textViewDataCarMake">Ford</string>
    <string name="textViewDataCarColor">Silver</string>
    <string name="textViewDataCarYear">2013</string>
    <string name="dialogCancel">Cancel</string>
    <string name="dialogDelete">Delete</string>
    <string name="dialogEdit">Edit</string>
    <string name="dialogSave">Save</string>
    <string name="dialogAccept">Accept</string>
    <string name="dialogOk">OK</string>
    <string name="dialogTitleCampusStart">Select Start Campus:</string>
    <string name="dialogTitleCampusEnd">Select End Campus:</string>
    <string name="textViewTitleCreateNewTrip">Create New Trip Post</string>
    <string name="textViewCampusSelect">Select a Campus</string>
    <string name="textViewPickTime">Set trip time</string>
    <string name="textViewPickDate">TRIP DATE</string>
    <string name="textViewTo">TO</string>
    <string name="textViewFrom">FROM</string>
    <string name="editTextTripDetails">Add Trip Details</string>
    <string name="textViewDetailsAdd">DETAILS</string>
    <string name="textButtonCreate">CREATE</string>
    <string name="textButtonCancel">CANCEL</string>
    <string name="textViewPickTimeSet">TRIP TIME</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_done">Done</string>
    
    
    
    <string name="user_nameF">Your First Name</string>
    <string name="user_nameL">Your Last Name</string>
    <string name="user_type">Enter your SFU email"</string>
    <string name="user_id">User _ID</string>
    <string name="user_password">Enter Password</string>

</resources>
