<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#e5e5e5" >
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_light" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="CARPOOL TRIP INFORMATION"
            android:textColor="#ffffff" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="10dp"
        android:layout_marginBottom="5dp" >

       <ImageView
           android:layout_width="0dp"
           android:layout_height="85dp"
           android:layout_weight="1"
           android:layout_marginRight="10dp"
           android:baselineAlignBottom="false"
           android:src="@drawable/icon_driver" />

       <TableLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="3" >

           <TableRow
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="3"
               android:orientation="vertical" >

               <TextView
                   android:id="@+id/textView1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/textViewUsernameDriver" />
           </TableRow>

           <TableRow
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="3"
               android:orientation="vertical" >
               
               <ImageView
		           android:layout_width="0dp"
		           android:layout_height="50dp"
		           android:layout_weight=".5"
		           android:layout_marginRight="10dp"
		           android:baselineAlignBottom="false"
		           android:src="@drawable/icon_sms" />
               
               <ImageView
		           android:layout_width="0dp"
		           android:layout_height="50dp"
		           android:layout_weight=".5"
		           android:layout_marginRight="10dp"
		           android:baselineAlignBottom="false"
		           android:src="@drawable/icon_email" />
               
               <ImageView
		           android:layout_width="0dp"
		           android:layout_height="50dp"
		           android:layout_weight=".5"
		           android:layout_marginRight="10dp"
		           android:baselineAlignBottom="false"
		           android:src="@drawable/icon_leave" />
               
           </TableRow>
       </TableLayout>

    </TableRow>
<!-- CAMPUS TO AND FROM -->  
    <TableRow
         android:id="@+id/tableRow3"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp" >

         <TextView
             android:id="@+id/textView11"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:padding="2dp"
             android:gravity="center"
             android:text="VANCOUVER"
             android:background="@android:color/darker_gray"
             android:textColor="@android:color/white" />

         <TextView
             android:id="@+id/textView12"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
             android:text="TO" />

         <TextView
             android:id="@+id/textView13"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:gravity="center"
             android:text="BURNABY"
             android:background="@android:color/darker_gray"
             android:textColor="@android:color/white" />

     </TableRow>
     
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>
    
<!-- TRIP DATE AND TIME -->
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textViewCreateTripCampusEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewTripDate"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/textViewCreateTripCampusStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="5dp"
            android:text="@string/textViewDataTripDate" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewTripTime"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/textViewDataTripTime" />

    </TableRow>
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>

<!-- CARPOOL GUESTS -->    
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewCarpoolGuests"
            android:textColor="@android:color/holo_blue_dark" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/textViewDataCarpoolGuests" />

    </TableRow>
    
     <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>
     
<!-- MEETING LOCATION DETAILS -->
     <TableRow
         android:id="@+id/tableRow5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_marginBottom="5dp" >

         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/textViewLocationMeetDetails"
             android:textColor="@android:color/holo_blue_dark" />

     </TableRow>
<!-- MEETING LOCATION DETAILS TEXTAREA -->

     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="@string/textViewDataLocationMeetingDetails"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="12sp" />
     
     <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>
     
<!-- DRIVERS CAR DETAILS TITLE -->
     <TableRow
         android:id="@+id/tableRow7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:paddingBottom="5dp">

         <TextView
             android:id="@+id/textView15"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:text="@string/textViewCarDetails"
             android:textColor="@android:color/holo_blue_dark"/>
         
         <TextView
             android:id="@+id/textView16"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/textViewDataCarMake" />
         
         <TextView
             android:id="@+id/textView17"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/textViewDataCarModel" />
         
         <TextView
             android:id="@+id/textView18"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/textViewDataCarYear" />
         
         <TextView
             android:id="@+id/textView19"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/textViewDataCarColor" />

     </TableRow>
    
</TableLayout>