<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Enter Data about your User"
        android:textColor="#00f"
        android:textSize="11pt" />
    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >
        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/EditTextNameF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:text="@string/user_nameF" />
			<EditText
                android:id="@+id/EditTextNameL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:text="@string/user_nameL" />
        </TableRow>
        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/EditTextSpecies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:text="@string/user_type" >

            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/user_password" >

                <requestFocus />
            </EditText>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/ButtonSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Save" >
    </Button>
    <Button
        android:id="@+id/ButtonShowUsers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:capitalize="characters"
        android:text="Show All Users"
        android:textColor="#00f"
        android:textSize="12pt" >
    </Button>
</LinearLayout>