<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="My Users"
        android:textColor="#0f0"
        android:textSize="11pt" />
    <RelativeLayout
        android:id="@+id/RelativeLayoutHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="80dp"
            android:layout_marginLeft="10dp"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:text="@string/user_id"
            android:textColor="#f00" >
        </TextView>
        <TextView
            android:layout_width="80dp"
            android:layout_marginLeft="120dp"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:text="@string/user_nameF"
            android:textColor="#f00" >
        </TextView>
        <TextView
            android:layout_width="80dp"
            android:layout_marginLeft="210dp"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:text="@string/user_type"
            android:textColor="#f00" >
        </TextView>
    </RelativeLayout>
    <ListView
        android:id="@+id/userList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="#000"
        android:headerDividersEnabled="true"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" />
    <Button
        android:id="@+id/ButtonEnterMoreUsers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Add More Users" >
    </Button>
</LinearLayout>